--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.1.0",
+    "aws-sdk": "^2.1488.0",
     "axios": "^1.6.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
