--- a/client/.env.local
+++ b/client/.env.local
@@ -2,3 +2,4 @@ REACT_APP_AWS_ACCESS_KEY_ID=AKIAXH7PAAEV5HEEJ46L
 REACT_APP_AWS_SECRET_ACCESS_KEY=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
 REACT_APP_AWS_REGION=us-east-1
 REACT_APP_S3_BUCKET=mogulfashionbucket
+REACT_APP_API_URL=http://localhost:4000
