--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build --prefix client",
-    "heroku-postbuild": "npm run build"
+    "client-install": "npm install --prefix client",
+    "client-build": "npm run build --prefix client",
+    "build": "npm run client-build",
+    "heroku-postbuild": "npm run client-install && npm run client-build"
   },
   "author": "",
   "license": "ISC",
