--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.0"
   },
+  "engines": { 
+   "node": "18.18.2" 
+ },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
