--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.1.0",
     "aws-sdk": "^2.1488.0",
@@ -39,7 +38,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "cross-env NODE_ENV=test mocha",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -62,6 +61,12 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "null-loader": "^4.0.1"
+    "@testing-library/react": "^14.1.0",
+    "chai": "^4.3.10",
+    "fetch-mock": "^9.11.0",
+    "mocha": "^10.2.0",
+    "moxios": "^0.4.0",
+    "null-loader": "^4.0.1",
+    "sinon": "^17.0.1"
   }
 }
