--- a/client/package.json
+++ b/client/package.json
@@ -63,6 +63,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/react": "^14.1.0",
     "chai": "^4.3.10",
+    "enzyme": "^3.11.0",
     "fetch-mock": "^9.11.0",
     "mocha": "^10.2.0",
     "moxios": "^0.4.0",
