--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client-install": "npm install --prefix client",
+    "client-install": "npm install --prefix client --legacy-peer-deps",
     "client-build": "npm run build --prefix client",
     "build": "npm run client-build",
     "heroku-postbuild": "npm run client-install && npm run client-build"
