--- a/client/package.json
+++ b/client/package.json
@@ -72,6 +72,7 @@
     "@babel/register": "^7.22.15",
     "@testing-library/react": "^14.1.0",
     "chai": "^4.3.10",
+    "chai-enzyme": "^1.0.0-beta.1",
     "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
