--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "engines": {
     "node": "18.18.2"
